edition = "2023";

package wayplatform.connect.tachograph.dd.v1;

import "wayplatform/connect/tachograph/dd/v1/card_slot_number.proto";
import "wayplatform/connect/tachograph/dd/v1/driver_activity_value.proto";

// Represents a change in driver activity, driving status, or card status.
// This message preserves the original raw 2-byte bitfield for round-trip data
// fidelity while also providing convenient decoded fields for ease of use.
//
// See Data Dictionary, Section 2.1, `ActivityChangeInfo`.
//
// ASN.1 Specification:
//
//     ActivityChangeInfo ::= OCTET STRING (SIZE (2))
//
// The 16-bit field has the following structure: 'scpaattttttttttt'B
// - s:           Card slot number (1 bit)
// - c:           Driving status (1 bit)
// - p:           Card inserted status (1 bit)
// - aa:          Driver activity (2 bits)
// - ttttttttttt: Time of change in minutes since midnight (11 bits)
message ActivityChangeInfo {
  // The raw, original 2-byte bitfield. This field is the source of truth and
  // should be used for any serialization operations to ensure perfect data
  // fidelity.
  bytes raw_data = 10;

  // Slot of the driver/co-driver. Corresponds to bit 's'.
  // This is a convenience field derived from `raw_data`.
  CardSlotNumber slot = 1;

  // Indicates if this is crew mode (true) or single driver mode (false).
  // Corresponds to bit 'c'.
  // Protocol value: 0 = single, 1 = crew.
  // This is a convenience field derived from `raw_data`.
  bool crew = 3;

  // Indicates if a card is inserted. Corresponds to bit 'p'.
  // ASN.1 value `0` maps to `true`, `1` to `false`.
  // This is a convenience field derived from `raw_data`.
  bool inserted = 5;

  // Driver's activity (break/rest, availability, work, driving). Corresponds to bits 'aa'.
  // This is a convenience field derived from `raw_data`.
  DriverActivityValue activity = 7;

  // Time of the change in minutes since 00:00. Corresponds to bits 'ttttttttttt'.
  // This is a convenience field derived from `raw_data`.
  int32 time_of_change_minutes = 9;
}
